the bc25 parity oracle: whole games, bit-exact, and an EMPTY ledger
The 2025 Java engine as a CI-only differential test. The released fat jar is
self-contained, so there is no Gradle, no jsi shim, no Maven download list and
no deps.lock -- just the jar, one driver and four bots.

--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED is MANDATORY on every java
invocation: without it every player class load throws, the four starting towers
die on round 1, and the oracle is green while proving nothing. Bc25Trace exits
3 if no robot is ever built and ci.yml asserts every game reached 1900 rounds.

MEASURED, not hoped: all 24 pairs -- examplefuncsplayer plus three scenario
packages on six small maps -- are BIT-EXACT for whole 2000-round games, 38k to
51k trace lines a side. Peak bytecode 14% (example bot) and 35-46% (scenario),
zero mid-turn cut-offs, so the Tier A window is the whole game. Tier B
byte-diffs the entire finite arithmetic domain against the jar's own classes.
The ledger is EMPTY.

docs/PARITY.md records honestly what the scenario bot does NOT reach and why,
and which native shard covers each of those paths instead.